--- a/frontend/public/feedback.css
+++ b/frontend/public/feedback.css
@@ -146,10 +146,12 @@
 #star-5:checked ~ .footer .numb::before{
   content: "5 out of 5";
 }
-input[type="radio"]{
+.maindiv input[type="radio"]{
   display: none;
 }
 
+
+
 .login-box{
-  margin-top: 6%;
+  margin: 6% 0%;
 }
