--- a/frontend/src/components/order.css
+++ b/frontend/src/components/order.css
@@ -93,7 +93,7 @@ html {
     padding: 10px 0;
     font-size: 16px;
     color: #fff;
-    pointer-events: none;
+    /* pointer-events: none; */
     transition: .5s;
   }
   
