--- a/frontend/src/components/order.css
+++ b/frontend/src/components/order.css
@@ -244,6 +244,10 @@ html {
         text-align: center;
     }
 
+    .itembtn{
+      /* border: 2px solid red; */
+    }
+
     h2{
       font-size: 3em;
       letter-spacing: 1px;
