--- a/frontend/src/components/order.css
+++ b/frontend/src/components/order.css
@@ -1,5 +1,5 @@
 html {
-    height: 130vh;
+    height: 160vh;
   }
   body {
     margin:0;
@@ -108,6 +108,7 @@ html {
 
   .foodtable{
     margin-right: 15px;
+    margin-top: 20px;
   }
 
 
@@ -139,6 +140,41 @@ html {
                 0 0 50px #03e9f4,
                 0 0 100px #03e9f4;
   }
+
+
+  .login-box form #submitBtn a {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #ffc400;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 4px
+  }
+
+
+  #submitBtn{
+    color:#ffc400;
+    /* border: 2px solid red; */
+  }
+
+
+
+  .login-box #submitBtn a:hover {
+    background: #ffc400;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #ffc400,
+                0 0 25px #ffc400,
+                0 0 50px #ffc400,
+                0 0 100px #ffc400;
+  }
+
+
   
   .login-box a span {
     position: absolute;
@@ -235,9 +271,9 @@ html {
 
     a:focus{
         background: linear-gradient(360deg, transparent, #03e9f4);
-    animation: btn-anim4 1s linear infinite;
-    animation-delay: .75s;
-    border-radius: 5px;
+        animation: btn-anim4 1s linear infinite;
+        animation-delay: .75s;
+        border-radius: 5px;
     }
 
     .row1,.row2{
@@ -278,3 +314,52 @@ html {
         background-position: 100% 50%;
       }
     }
+
+    .tablenodiv{
+      transition: width 2s, height 4s;
+    }
+
+
+
+
+    .login-box #submitBtn a  span:nth-child(1) {
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, #ffc400);
+      animation: btn-anim1 1s linear infinite;
+    }
+
+    .login-box #submitBtn a span:nth-child(2) {
+      top: -100%;
+      right: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(180deg, transparent, #ffc400);
+      animation: btn-anim2 1s linear infinite;
+      animation-delay: .25s
+    }
+
+
+    .login-box #submitBtn a span:nth-child(3) {
+      bottom: 0;
+      right: -100%;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(270deg, transparent, #ffc400);
+      animation: btn-anim3 1s linear infinite;
+      animation-delay: .5s
+    }
+
+
+    .login-box #submitBtn a span:nth-child(4) {
+      bottom: -100%;
+      left: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(360deg, transparent, #ffc400);
+      animation: btn-anim4 1s linear infinite;
+      animation-delay: .75s
+    }
+
