--- a/frontend/src/components/feedback.css
+++ b/frontend/src/components/feedback.css
@@ -112,39 +112,60 @@
 }
 .footer .text::before{
   content: "Rate your experience";
+  color: black;
 }
 .footer .numb::before{
   content: "0 out of 5";
+  color: black;
 }
 #star-1:checked ~ .footer .text::before{
   content: "I just hate it";
+  color: black;
 }
 #star-1:checked ~ .footer .numb::before{
   content: "1 out of 5";
+  color: black;
+
 }
 #star-2:checked ~ .footer .text::before{
   content: "I don't like it";
+  color: black;
+
 }
 #star-2:checked ~ .footer .numb::before{
   content: "2 out of 5";
+  color: black;
+
 }
 #star-3:checked ~ .footer .text::before{
   content: "This is awesome";
+  color: black;
+
 }
 #star-3:checked ~ .footer .numb::before{
   content: "3 out of 5";
+  color: black;
+
 }
 #star-4:checked ~ .footer .text::before{
   content: "I just like it";
+  color: black;
+
 }
 #star-4:checked ~ .footer .numb::before{
   content: "4 out of 5";
+  color: black;
+
 }
 #star-5:checked ~ .footer .text::before{
   content: "I just love it";
+  color: black;
+
 }
 #star-5:checked ~ .footer .numb::before{
   content: "5 out of 5";
+  color: black;
+
 }
 .maindiv input[type="radio"]{
   display: none;
