--- a/frontend/src/components/order.css
+++ b/frontend/src/components/order.css
@@ -1,386 +1,356 @@
 html {
-    height: 190vh;
-  }
-  body {
-    margin:0;
-    padding:0;
-    font-family: sans-serif;
-    background: linear-gradient(#141e30, #243b55);
-  }
+  height: 190vh;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: linear-gradient(#141e30, #243b55);
+}
 
-  
-  
+.login-box {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+}
+@media (min-width: 600px) {
   .login-box {
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    background: rgba(0,0,0,.5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    border-radius: 10px;
-  }
-
-  #maindiv .login-box{
-    top: 60%;
+    width: 800px;
+    
   }
   
-  .login-box h2 {
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-  }
-  
-  .login-box .user-box {
-    position: relative;
-  }
-  
-  .login-box .user-box input {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
-  }
-  .login-box .user-box label {
-    position: absolute;
-    top:0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    pointer-events: none;
-    transition: .5s;
-  }
-  
-  .login-box .user-box input:focus ~ label,
-  .login-box .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #03e9f4;
-    font-size: 12px;
-  }
+}
 
+#maindiv .login-box {
+  top: 60%;
+}
 
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+}
 
+.login-box .user-box {
+  position: relative;
+}
 
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: 0.5s;
+}
 
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #03e9f4;
+  font-size: 12px;
+}
 
+.login-box .user-box1 {
+  position: relative;
+}
 
+.login-box .user-box1 input {
+  /* width: 50%; */
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box .user-box1 label {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  /* pointer-events: none; */
+  transition: 0.5s;
+}
 
+.login-box .user-box1 label,
+.login-box .user-box1 label {
+  top: -20px;
+  left: 0;
+  color: #03e9f4;
+  font-size: 12px;
+}
 
+.foodtable {
+  margin-right: 15px;
+  margin-top: 20px;
+}
 
-  .login-box .user-box1 {
-    position: relative;
-  }
-  
-  .login-box .user-box1 input {
-    /* width: 50%; */
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
-  }
-  .login-box .user-box1 label {
-    /* position: absolute; */
-    top:0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    /* pointer-events: none; */
-    transition: .5s;
-  }
-  
-  .login-box .user-box1 label,
-  .login-box .user-box1 label {
-    top: -20px;
-    left: 0;
-    color: #03e9f4;
-    font-size: 12px;
-  }
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #03e9f4;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 40px;
+  letter-spacing: 4px;
+}
 
+.login-box a:hover {
+  background: #03e9f4;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
+    0 0 100px #03e9f4;
+}
 
-  .foodtable{
-    margin-right: 15px;
-    margin-top: 20px;
-  }
+.login-box form #submitBtn a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #ffc400;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 40px;
+  letter-spacing: 4px;
+}
 
+#submitBtn {
+  color: #ffc400;
+  /* border: 2px solid red; */
+}
 
+.login-box #submitBtn a:hover {
+  background: #ffc400;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #ffc400, 0 0 25px #ffc400, 0 0 50px #ffc400,
+    0 0 100px #ffc400;
+}
 
+.login-box a span {
+  position: absolute;
+  display: block;
+}
 
-  
-  
-  
-  .login-box form a {
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    color: #03e9f4;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    transition: .5s;
-    margin-top: 40px;
-    letter-spacing: 4px
-  }
-  
-  .login-box a:hover {
-    background: #03e9f4;
-    color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #03e9f4,
-                0 0 25px #03e9f4,
-                0 0 50px #03e9f4,
-                0 0 100px #03e9f4;
-  }
+.login-box a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: btn-anim1 1s linear infinite;
+}
 
-
-  .login-box form #submitBtn a {
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    color: #ffc400;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    transition: .5s;
-    margin-top: 40px;
-    letter-spacing: 4px
-  }
-
-
-  #submitBtn{
-    color:#ffc400;
-    /* border: 2px solid red; */
-  }
-
-
-
-  .login-box #submitBtn a:hover {
-    background: #ffc400;
-    color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #ffc400,
-                0 0 25px #ffc400,
-                0 0 50px #ffc400,
-                0 0 100px #ffc400;
-  }
-
-
-  
-  .login-box a span {
-    position: absolute;
-    display: block;
-  }
-  
-  .login-box a span:nth-child(1) {
-    top: 0;
+@keyframes btn-anim1 {
+  0% {
     left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #03e9f4);
-    animation: btn-anim1 1s linear infinite;
   }
-  
-  @keyframes btn-anim1 {
-    0% {
-      left: -100%;
-    }
-    50%,100% {
-      left: 100%;
-    }
+  50%,
+  100% {
+    left: 100%;
   }
-  
-  .login-box a span:nth-child(2) {
+}
+
+.login-box a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: 0.25s;
+}
+
+@keyframes btn-anim2 {
+  0% {
     top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #03e9f4);
-    animation: btn-anim2 1s linear infinite;
-    animation-delay: .25s
   }
-  
-  @keyframes btn-anim2 {
-    0% {
-      top: -100%;
-    }
-    50%,100% {
-      top: 100%;
-    }
+  50%,
+  100% {
+    top: 100%;
   }
-  
-  .login-box a span:nth-child(3) {
-    bottom: 0;
+}
+
+.login-box a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #03e9f4);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: 0.5s;
+}
+
+@keyframes btn-anim3 {
+  0% {
     right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #03e9f4);
-    animation: btn-anim3 1s linear infinite;
-    animation-delay: .5s
   }
-  
-  @keyframes btn-anim3 {
-    0% {
-      right: -100%;
-    }
-    50%,100% {
-      right: 100%;
-    }
+  50%,
+  100% {
+    right: 100%;
   }
-  
-  .login-box a span:nth-child(4) {
+}
+
+.login-box a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #03e9f4);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: 0.75s;
+}
+
+@keyframes btn-anim4 {
+  0% {
     bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #03e9f4);
-    animation: btn-anim4 1s linear infinite;
-    animation-delay: .75s
   }
-  
-  @keyframes btn-anim4 {
-    0% {
-      bottom: -100%;
-    }
-    50%,100% {
-      bottom: 100%;
-    }
+  50%,
+  100% {
+    bottom: 100%;
   }
-  
+}
 
+.submitbtn {
+  text-align: center;
+}
 
-  .submitbtn{
-    text-align: center;
+.itembtn {
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  padding: 5% 5%;
+}
+
+a:focus {
+  background: linear-gradient(360deg, transparent, #03e9f4);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: 0.75s;
+  border-radius: 5px;
+}
+
+.row1,
+.row2 {
+  text-align: center;
+}
+
+.itembtn {
+  /* border: 2px solid red; */
+}
+
+h2 {
+  font-size: 3em;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  background: url("./imgage2.jpg");
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: text 3.5s linear infinite;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background: #1A1500; */
+  color: white;
+}
+
+@keyframes text {
+  from {
+    background-position: 0% 50%;
   }
+  to {
+    background-position: 100% 50%;
+  }
+}
 
-  .itembtn {
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    padding: 5% 5%;
-    }
+.tablenodiv {
+  transition: width 2s, height 4s;
+}
 
-    a:focus{
-        background: linear-gradient(360deg, transparent, #03e9f4);
-        animation: btn-anim4 1s linear infinite;
-        animation-delay: .75s;
-        border-radius: 5px;
-    }
+.login-box #submitBtn a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #ffc400);
+  animation: btn-anim1 1s linear infinite;
+}
 
-    .row1,.row2{
-        text-align: center;
-    }
+.login-box #submitBtn a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #ffc400);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: 0.25s;
+}
 
-    .itembtn{
-      /* border: 2px solid red; */
-    }
+.login-box #submitBtn a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #ffc400);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: 0.5s;
+}
 
-    h2{
-      font-size: 3em;
-      letter-spacing: 1px;
-      font-weight: bold;
-      font-family: 'Montserrat', sans-serif;
-      background: url('./imgage2.jpg');
-      -webkit-background-clip: text;
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: text 3.5s linear infinite;
+.login-box #submitBtn a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #ffc400);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: 0.75s;
+}
 
-    }
+.stdtable {
+  background-color: white;
+  color: black;
+  width: 100%;
+}
 
-    body {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      /* background: #1A1500; */
-      color: white;
-    }
-
-    @keyframes text {
-      from {
-        background-position: 0% 50%;
-      }
-      to {
-        background-position: 100% 50%;
-      }
-    }
-
-    .tablenodiv{
-      transition: width 2s, height 4s;
-    }
-
-
-
-
-    .login-box #submitBtn a  span:nth-child(1) {
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 2px;
-      background: linear-gradient(90deg, transparent, #ffc400);
-      animation: btn-anim1 1s linear infinite;
-    }
-
-    .login-box #submitBtn a span:nth-child(2) {
-      top: -100%;
-      right: 0;
-      width: 2px;
-      height: 100%;
-      background: linear-gradient(180deg, transparent, #ffc400);
-      animation: btn-anim2 1s linear infinite;
-      animation-delay: .25s
-    }
-
-
-    .login-box #submitBtn a span:nth-child(3) {
-      bottom: 0;
-      right: -100%;
-      width: 100%;
-      height: 2px;
-      background: linear-gradient(270deg, transparent, #ffc400);
-      animation: btn-anim3 1s linear infinite;
-      animation-delay: .5s
-    }
-
-
-    .login-box #submitBtn a span:nth-child(4) {
-      bottom: -100%;
-      left: 0;
-      width: 2px;
-      height: 100%;
-      background: linear-gradient(360deg, transparent, #ffc400);
-      animation: btn-anim4 1s linear infinite;
-      animation-delay: .75s
-    }
-
-
-
-
-    .stdtable{
-      background-color: white;
-      color: black;
-      width: 100%;
-    }
-
-
-    .maintablediv{
-      width: 100%;
-    }
-
-
+.maintablediv {
+  width: 100%;
+}
