--- a/frontend/src/components/order.css
+++ b/frontend/src/components/order.css
@@ -10,7 +10,7 @@ body {
 
 .login-box {
   position: absolute;
-  top: 80%;
+  top: 75%;
   left: 50%;
   width: 400px;
   padding: 40px;
@@ -108,8 +108,16 @@ body {
 }
 
 .foodtable {
-  margin-right: 15px;
+  margin-right: 10px;
   margin-top: 20px;
+}
+
+.yeslabel{
+  margin-right: 25px;
+}
+
+#yesfood{
+  margin-left: 25px;
 }
 
 .login-box form a {
@@ -353,4 +361,11 @@ body {
 
 .maintablediv {
   width: 100%;
+}
+
+
+.itembtn{
+  /* border: 2px solid red; */
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
