--- a/frontend/src/components/table.css
+++ b/frontend/src/components/table.css
@@ -8,3 +8,12 @@
   .maintablediv{
     width: 100%;
   }
+
+  .tablebtn{
+    /* border: 2px solid red; */
+    margin: 5%;
+  }
+
+  .btndiv{
+    text-align: center;
+  }
