--- a/frontend/src/components/order.css
+++ b/frontend/src/components/order.css
@@ -377,8 +377,8 @@ body {
 
 
 
-
-/* .login-box #feedbackemoji a span:nth-child(1) {
+/* 
+.login-box #feedbackemoji a span:nth-child(1) {
   top: 0;
   left: -100%;
   width: 100%;
