--- a/frontend/src/components/order.css
+++ b/frontend/src/components/order.css
@@ -1,16 +1,14 @@
-html {
-  height: 190vh;
-}
+
 body {
-  margin: 0;
+  margin: 0 ;
   padding: 0;
   font-family: sans-serif;
-  background: linear-gradient(#141e30, #243b55);
+  background: #243b55
 }
 
 .login-box {
   position: absolute;
-  top: 75%;
+  /* top: 75%; */
   left: 50%;
   width: 400px;
   padding: 40px;
@@ -30,6 +28,9 @@ body {
 
 #maindiv .login-box {
   top: 60%;
+}
+.margini-box{
+  margin: 6% 0%;
 }
 
 .login-box h2 {
@@ -254,6 +255,7 @@ body {
 }
 
 .submitbtn {
+  display: block;
   text-align: center;
 }
 
