--- a/frontend/src/components/order.css
+++ b/frontend/src/components/order.css
@@ -431,4 +431,19 @@ Link{
 } */
   .homi-box{
     margin:0% 0%;
+    margin-bottom: 5%;
+  }
+
+
+  button:active{
+    background: #03e9f4;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
+      0 0 100px #03e9f4;
+  }
+
+
+  .headingmargin{
+    margin-top: 5%;
   }
